force-app/main/default/objects/AdvancedShipment__c/fields/TotalKickbackVND__c.field-meta.xml
<CustomField>
    <fullName>TotalKickbackVND__c</fullName>
    <label>Total Kickback (VND)</label>
    <summarizedField>ConsolBill__c.TotalBuyingInclTaxLocal__c</summarizedField>
    <summaryFilterItems>
        <field>ConsolBill__c.Service_Type__c</field>
        <operation>equals</operation>
        <value>COMMISSION</value>
    </summaryFilterItems>
    <summaryForeignKey>ConsolBill__c.ConsolidationShipmentName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>