force-app/main/default/objects/AdvancedShipment__c/fields/TotalNumberofContainers__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberofContainers__c</fullName>
    <formula>Container_Qnty_1__c +  Container_Qnty_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Containers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>