force-app/main/default/objects/AdvancedShipment__c/fields/TotalProfitExcludeKB__c.field-meta.xml
<CustomField>
    <fullName>TotalProfitExcludeKB__c</fullName>
    <formula>ProfitINCLTaxLocal__c +  TotalKickbackVND__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Profit (Exclude KB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>