force-app/main/default/objects/AdvancedShipment__c/fields/TotalSellingInclTaxActual__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingInclTaxActual__c</fullName>
    <label>Total Selling Incl Tax (Actual)</label>
    <summarizedField>ConsolBill__c.TotalSellingInclTaxActual__c</summarizedField>
    <summaryFilterItems>
        <field>ConsolBill__c.Allocated__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ConsolBill__c.Billing_status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>ConsolBill__c.ConsolidationShipmentName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>