force-app/main/default/objects/AdvancedShipment__c/fields/TotalUnreceivedBalanceVND__c.field-meta.xml
<CustomField>
    <fullName>TotalUnreceivedBalanceVND__c</fullName>
    <label>Total Unreceived Balance (VND)</label>
    <summarizedField>ConsolBill__c.Total_Selling_Incl_Tax_Local__c</summarizedField>
    <summaryFilterItems>
        <field>ConsolBill__c.PaymentConfirmedSelling__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>ConsolBill__c.ConsolidationShipmentName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>