force-app/main/default/objects/AdvancedShipment__c/fields/Transit_Port__c.field-meta.xml
<CustomField>
    <fullName>Transit_Port__c</fullName>
    <label>Transit Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>