force-app/main/default/objects/AdvancedShipment__c/fields/Transitport__c.field-meta.xml
<CustomField>
    <fullName>Transitport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transit Port (VIA)</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Jobs (Transit port)</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>