force-app/main/default/objects/AdvancedShipment__c/fields/Transportation_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Service_Type__c</fullName>
    <label>Transportation Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFS/CFS</fullName>
            </value>
            <value>
                <fullName>CY/CY</fullName>
            </value>
            <value>
                <fullName>CFS/CY</fullName>
            </value>
            <value>
                <fullName>CY/CFS</fullName>
            </value>
            <value>
                <fullName>BULK</fullName>
            </value>
            <value>
                <fullName>AIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>