force-app/main/default/objects/AdvancedShipment__c/fields/VanningDevanning_Date__c.field-meta.xml
<CustomField>
    <fullName>VanningDevanning_Date__c</fullName>
    <label>Vanning/Devanning Date</label>
    <type>Date</type>
</CustomField>