force-app/main/default/objects/AdvancedShipment__c/fields/VanningDevanning_Docs_Sent_to_Devan_Co__c.field-meta.xml
<CustomField>
    <fullName>VanningDevanning_Docs_Sent_to_Devan_Co__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vanning/Devanning Docs Sent to Devan Co.</label>
    <type>Checkbox</type>
</CustomField>