force-app/main/default/objects/AdvancedShipment__c/fields/VGM_Closing_DateTime__c.field-meta.xml
<CustomField>
    <fullName>VGM_Closing_DateTime__c</fullName>
    <label>VGM Closing Date/Time</label>
    <type>DateTime</type>
</CustomField>