force-app/main/default/objects/AdvancedShipment__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <formula>DIMH__c *  DIML__c *  DIMW__c *  Quantity__c</formula>
    <label>DIM (Dimension)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>