force-app/main/default/objects/AdvancedShipment__c/fields/Volumetext__c.field-meta.xml
<CustomField>
    <fullName>Volumetext__c</fullName>
    <label>Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>