force-app/main/default/objects/AdvancedShipment__c/fields/Voyage__c.field-meta.xml
<CustomField>
    <fullName>Voyage__c</fullName>
    <label>Voyage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>