force-app/main/default/objects/AdvancedShipment__c/fields/X1st_VesselFlight__c.field-meta.xml
<CustomField>
    <fullName>X1st_VesselFlight__c</fullName>
    <label>1st Vessel/Flight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>