force-app/main/default/objects/AdvancedShipment__c/fields/X2nd_Master_BL_Number__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Master_BL_Number__c</fullName>
    <label>2nd Master B/L Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>