force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICCHARTERAIR.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICCHARTERAIR</fullName>
    <active>true</active>
    <label>DOMESTIC - CHARTER - AIR</label>
</RecordType>