force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICCHARTERINLANDWATERWAY.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICCHARTERINLANDWATERWAY</fullName>
    <active>true</active>
    <label>DOMESTIC - CHARTER - INLAND WATERWAY</label>
</RecordType>