force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICCHARTERMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICCHARTERMULTIMODAL</fullName>
    <active>true</active>
    <label>DOMESTIC - CHARTER - MULTIMODAL</label>
</RecordType>