force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICCHARTERRAIL.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICCHARTERRAIL</fullName>
    <active>true</active>
    <label>DOMESTIC - CHARTER - RAIL</label>
</RecordType>