force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICCHARTERTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICCHARTERTRUCKING</fullName>
    <active>true</active>
    <label>DOMESTIC - CHARTER - TRUCKING</label>
</RecordType>