force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICCONSOLAIR.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICCONSOLAIR</fullName>
    <active>true</active>
    <label>DOMESTIC - CONSOL - AIR</label>
</RecordType>