force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICCONSOLINLANDWATERWAY.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICCONSOLINLANDWATERWAY</fullName>
    <active>true</active>
    <label>DOMESTIC - CONSOL - INLAND WATERWAY</label>
</RecordType>