force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICCONSOLMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICCONSOLMULTIMODAL</fullName>
    <active>true</active>
    <label>DOMESTIC - CONSOL - MULTIMODAL</label>
</RecordType>