force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICCONSOLRAIL.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICCONSOLRAIL</fullName>
    <active>true</active>
    <label>DOMESTIC - CONSOL - RAIL</label>
</RecordType>