force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICCONSOLTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICCONSOLTRUCKING</fullName>
    <active>true</active>
    <label>DOMESTIC - CONSOL - TRUCKING</label>
</RecordType>