force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICFCLAIR.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICFCLAIR</fullName>
    <active>true</active>
    <label>DOMESTIC - FCL - AIR</label>
</RecordType>