force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICFCLINLANDWATERWAY.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICFCLINLANDWATERWAY</fullName>
    <active>true</active>
    <label>DOMESTIC - FCL - INLAND WATERWAY</label>
</RecordType>