force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICFCLMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICFCLMULTIMODAL</fullName>
    <active>true</active>
    <label>DOMESTIC - FCL - MULTIMODAL</label>
</RecordType>