force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICFCLRAIL.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICFCLRAIL</fullName>
    <active>true</active>
    <label>DOMESTIC - FCL - RAIL</label>
</RecordType>