force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICFCLTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICFCLTRUCKING</fullName>
    <active>true</active>
    <label>DOMESTIC - FCL - TRUCKING</label>
</RecordType>