force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICLCLAIR.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICLCLAIR</fullName>
    <active>true</active>
    <label>DOMESTIC - LCL - AIR</label>
</RecordType>