force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICLCLINLANDWATERWAY.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICLCLINLANDWATERWAY</fullName>
    <active>true</active>
    <label>DOMESTIC - LCL - INLAND WATERWAY</label>
</RecordType>