force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICLCLMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICLCLMULTIMODAL</fullName>
    <active>true</active>
    <label>DOMESTIC - LCL - MULTIMODAL</label>
</RecordType>