force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICLCLRAIL.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICLCLRAIL</fullName>
    <active>true</active>
    <label>DOMESTIC - LCL - RAIL</label>
</RecordType>