force-app/main/default/objects/AdvancedShipment__c/recordTypes/DOMESTICLCLTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>DOMESTICLCLTRUCKING</fullName>
    <active>true</active>
    <label>DOMESTIC - LCL - TRUCKING</label>
</RecordType>