force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTCHARTERAIR.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTCHARTERAIR</fullName>
    <active>true</active>
    <label>ENTREPOT - CHARTER - AIR</label>
</RecordType>