force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTCHARTERMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTCHARTERMULTIMODAL</fullName>
    <active>true</active>
    <label>ENTREPOT - CHARTER - MULTIMODAL</label>
</RecordType>