force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTCHARTERRAIL.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTCHARTERRAIL</fullName>
    <active>true</active>
    <label>ENTREPOT - CHARTER - RAIL</label>
</RecordType>