force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTCHARTERSEA.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTCHARTERSEA</fullName>
    <active>true</active>
    <label>ENTREPOT - CHARTER - SEA</label>
</RecordType>