force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTCHARTERTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTCHARTERTRUCKING</fullName>
    <active>true</active>
    <label>ENTREPOT - CHARTER - TRUCKING</label>
</RecordType>