force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTCONSOLAIR.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTCONSOLAIR</fullName>
    <active>true</active>
    <label>ENTREPOT - CONSOL - AIR</label>
</RecordType>