force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTCONSOLMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTCONSOLMULTIMODAL</fullName>
    <active>true</active>
    <label>ENTREPOT - CONSOL - MULTIMODAL</label>
</RecordType>