force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTCONSOLRAIL.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTCONSOLRAIL</fullName>
    <active>true</active>
    <label>ENTREPOT - CONSOL - RAIL</label>
</RecordType>