force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTCONSOLSEA.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTCONSOLSEA</fullName>
    <active>true</active>
    <label>ENTREPOT - CONSOL - SEA</label>
</RecordType>