force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTCONSOLTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTCONSOLTRUCKING</fullName>
    <active>true</active>
    <label>ENTREPOT - CONSOL - TRUCKING</label>
</RecordType>