force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTFCLAIR.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTFCLAIR</fullName>
    <active>true</active>
    <label>ENTREPOT - FCL - AIR</label>
</RecordType>