force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTFCLMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTFCLMULTIMODAL</fullName>
    <active>true</active>
    <label>ENTREPOT - FCL - MULTIMODAL</label>
</RecordType>