force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTFCLRAIL.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTFCLRAIL</fullName>
    <active>true</active>
    <label>ENTREPOT - FCL - RAIL</label>
</RecordType>