force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTFCLSEA.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTFCLSEA</fullName>
    <active>true</active>
    <label>ENTREPOT - FCL - SEA</label>
</RecordType>