force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTFCLTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTFCLTRUCKING</fullName>
    <active>true</active>
    <label>ENTREPOT - FCL - TRUCKING</label>
</RecordType>