force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTLCLAIR.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTLCLAIR</fullName>
    <active>true</active>
    <label>ENTREPOT - LCL - AIR</label>
</RecordType>