force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTLCLMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTLCLMULTIMODAL</fullName>
    <active>true</active>
    <label>ENTREPOT - LCL - MULTIMODAL</label>
</RecordType>