force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTLCLRAIL.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTLCLRAIL</fullName>
    <active>true</active>
    <label>ENTREPOT - LCL - RAIL</label>
</RecordType>