force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTLCLSEA.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTLCLSEA</fullName>
    <active>true</active>
    <label>ENTREPOT - LCL - SEA</label>
</RecordType>