force-app/main/default/objects/AdvancedShipment__c/recordTypes/ENTREPOTLCLTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>ENTREPOTLCLTRUCKING</fullName>
    <active>true</active>
    <label>ENTREPOT - LCL - TRUCKING</label>
</RecordType>