force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTCHARTERAIR.recordType-meta.xml
<RecordType>
    <fullName>EXPORTCHARTERAIR</fullName>
    <active>true</active>
    <label>EXPORT - CHARTER - AIR</label>
</RecordType>