force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTCHARTERMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>EXPORTCHARTERMULTIMODAL</fullName>
    <active>true</active>
    <label>EXPORT - CHARTER - MULTIMODAL</label>
</RecordType>