force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTCHARTERRAIL.recordType-meta.xml
<RecordType>
    <fullName>EXPORTCHARTERRAIL</fullName>
    <active>true</active>
    <label>EXPORT - CHARTER - RAIL</label>
</RecordType>