force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTCHARTERSEA.recordType-meta.xml
<RecordType>
    <fullName>EXPORTCHARTERSEA</fullName>
    <active>true</active>
    <label>EXPORT - CHARTER - SEA</label>
</RecordType>