force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTCHARTERTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>EXPORTCHARTERTRUCKING</fullName>
    <active>true</active>
    <label>EXPORT - CHARTER - TRUCKING</label>
</RecordType>