force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTCONSOLAIR.recordType-meta.xml
<RecordType>
    <fullName>EXPORTCONSOLAIR</fullName>
    <active>true</active>
    <label>EXPORT - CONSOL - AIR</label>
</RecordType>