force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTCONSOLMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>EXPORTCONSOLMULTIMODAL</fullName>
    <active>true</active>
    <label>EXPORT - CONSOL - MULTIMODAL</label>
</RecordType>