force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTCONSOLRAIL.recordType-meta.xml
<RecordType>
    <fullName>EXPORTCONSOLRAIL</fullName>
    <active>true</active>
    <label>EXPORT - CONSOL - RAIL</label>
</RecordType>