force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTCONSOLSEA.recordType-meta.xml
<RecordType>
    <fullName>EXPORTCONSOLSEA</fullName>
    <active>true</active>
    <label>EXPORT - CONSOL - SEA</label>
</RecordType>