force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTCONSOLTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>EXPORTCONSOLTRUCKING</fullName>
    <active>true</active>
    <label>EXPORT - CONSOL - TRUCKING</label>
</RecordType>