force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTFCLAIR.recordType-meta.xml
<RecordType>
    <fullName>EXPORTFCLAIR</fullName>
    <active>true</active>
    <label>EXPORT - FCL - AIR</label>
</RecordType>