force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTFCLMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>EXPORTFCLMULTIMODAL</fullName>
    <active>true</active>
    <label>EXPORT - FCL - MULTIMODAL</label>
</RecordType>