force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTFCLRAIL.recordType-meta.xml
<RecordType>
    <fullName>EXPORTFCLRAIL</fullName>
    <active>true</active>
    <label>EXPORT - FCL - RAIL</label>
</RecordType>