force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTFCLSEA.recordType-meta.xml
<RecordType>
    <fullName>EXPORTFCLSEA</fullName>
    <active>true</active>
    <label>EXPORT - FCL - SEA</label>
</RecordType>