force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTFCLTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>EXPORTFCLTRUCKING</fullName>
    <active>true</active>
    <label>EXPORT - FCL - TRUCKING</label>
</RecordType>