force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTLCLAIR.recordType-meta.xml
<RecordType>
    <fullName>EXPORTLCLAIR</fullName>
    <active>true</active>
    <label>EXPORT - LCL - AIR</label>
</RecordType>