force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTLCLMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>EXPORTLCLMULTIMODAL</fullName>
    <active>true</active>
    <label>EXPORT - LCL - MULTIMODAL</label>
</RecordType>