force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTLCLRAIL.recordType-meta.xml
<RecordType>
    <fullName>EXPORTLCLRAIL</fullName>
    <active>true</active>
    <label>EXPORT - LCL - RAIL</label>
</RecordType>