force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTLCLSEA.recordType-meta.xml
<RecordType>
    <fullName>EXPORTLCLSEA</fullName>
    <active>true</active>
    <label>EXPORT - LCL - SEA</label>
</RecordType>