force-app/main/default/objects/AdvancedShipment__c/recordTypes/EXPORTLCLTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>EXPORTLCLTRUCKING</fullName>
    <active>true</active>
    <label>EXPORT - LCL - TRUCKING</label>
</RecordType>