force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTCHARTERAIR.recordType-meta.xml
<RecordType>
    <fullName>IMPORTCHARTERAIR</fullName>
    <active>true</active>
    <label>IMPORT - CHARTER - AIR</label>
</RecordType>