force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTCHARTERMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>IMPORTCHARTERMULTIMODAL</fullName>
    <active>true</active>
    <label>IMPORT - CHARTER - MULTIMODAL</label>
</RecordType>