force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTCHARTERRAIL.recordType-meta.xml
<RecordType>
    <fullName>IMPORTCHARTERRAIL</fullName>
    <active>true</active>
    <label>IMPORT - CHARTER - RAIL</label>
</RecordType>