force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTCHARTERSEA.recordType-meta.xml
<RecordType>
    <fullName>IMPORTCHARTERSEA</fullName>
    <active>true</active>
    <label>IMPORT - CHARTER - SEA</label>
</RecordType>