force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTCHARTERTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>IMPORTCHARTERTRUCKING</fullName>
    <active>true</active>
    <label>IMPORT - CHARTER - TRUCKING</label>
</RecordType>