force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTCONSOLAIR.recordType-meta.xml
<RecordType>
    <fullName>IMPORTCONSOLAIR</fullName>
    <active>true</active>
    <label>IMPORT - CONSOL - AIR</label>
</RecordType>