force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTCONSOLMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>IMPORTCONSOLMULTIMODAL</fullName>
    <active>true</active>
    <label>IMPORT - CONSOL - MULTIMODAL</label>
</RecordType>