force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTCONSOLRAIL.recordType-meta.xml
<RecordType>
    <fullName>IMPORTCONSOLRAIL</fullName>
    <active>true</active>
    <label>IMPORT - CONSOL - RAIL</label>
</RecordType>