force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTCONSOLSEA.recordType-meta.xml
<RecordType>
    <fullName>IMPORTCONSOLSEA</fullName>
    <active>true</active>
    <label>IMPORT - CONSOL - SEA</label>
</RecordType>