force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTCONSOLTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>IMPORTCONSOLTRUCKING</fullName>
    <active>true</active>
    <label>IMPORT - CONSOL - TRUCKING</label>
</RecordType>