force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTFCLAIR.recordType-meta.xml
<RecordType>
    <fullName>IMPORTFCLAIR</fullName>
    <active>true</active>
    <label>IMPORT - FCL - AIR</label>
</RecordType>