force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTFCLMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>IMPORTFCLMULTIMODAL</fullName>
    <active>true</active>
    <label>IMPORT - FCL - MULTIMODAL</label>
</RecordType>