force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTFCLRAIL.recordType-meta.xml
<RecordType>
    <fullName>IMPORTFCLRAIL</fullName>
    <active>true</active>
    <label>IMPORT - FCL - RAIL</label>
</RecordType>