force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTFCLSEA.recordType-meta.xml
<RecordType>
    <fullName>IMPORTFCLSEA</fullName>
    <active>true</active>
    <label>IMPORT - FCL - SEA</label>
</RecordType>