force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTFCLTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>IMPORTFCLTRUCKING</fullName>
    <active>true</active>
    <label>IMPORT - FCL - TRUCKING</label>
</RecordType>