force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTLCLAIR.recordType-meta.xml
<RecordType>
    <fullName>IMPORTLCLAIR</fullName>
    <active>true</active>
    <label>IMPORT - LCL - AIR</label>
</RecordType>