force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTLCLMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>IMPORTLCLMULTIMODAL</fullName>
    <active>true</active>
    <label>IMPORT - LCL - MULTIMODAL</label>
</RecordType>