force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTLCLRAIL.recordType-meta.xml
<RecordType>
    <fullName>IMPORTLCLRAIL</fullName>
    <active>true</active>
    <label>IMPORT - LCL - RAIL</label>
</RecordType>