force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTLCLSEA.recordType-meta.xml
<RecordType>
    <fullName>IMPORTLCLSEA</fullName>
    <active>true</active>
    <label>IMPORT - LCL - SEA</label>
</RecordType>