force-app/main/default/objects/AdvancedShipment__c/recordTypes/IMPORTLCLTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>IMPORTLCLTRUCKING</fullName>
    <active>true</active>
    <label>IMPORT - LCL - TRUCKING</label>
</RecordType>