force-app/main/default/objects/AdvancedShipment__c/recordTypes/THIRDCOUNTRYCHARTER_RAIL.recordType-meta.xml
<RecordType>
    <fullName>THIRDCOUNTRYCHARTER_RAIL</fullName>
    <active>true</active>
    <label>THIRD COUNTRY - CHARTER - RAIL</label>
</RecordType>