force-app/main/default/objects/AdvancedShipment__c/recordTypes/THIRDCOUNTRYCHARTER_TRUCKING.recordType-meta.xml
<RecordType>
    <fullName>THIRDCOUNTRYCHARTER_TRUCKING</fullName>
    <active>true</active>
    <label>THIRD COUNTRY - CHARTER - TRUCKING</label>
</RecordType>