force-app/main/default/objects/AdvancedShipment__c/recordTypes/THIRDCOUNTRYCHARTERAIR.recordType-meta.xml
<RecordType>
    <fullName>THIRDCOUNTRYCHARTERAIR</fullName>
    <active>true</active>
    <label>THIRD COUNTRY - CHARTER - AIR</label>
</RecordType>