force-app/main/default/objects/AdvancedShipment__c/recordTypes/THIRDCOUNTRYCHARTERMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>THIRDCOUNTRYCHARTERMULTIMODAL</fullName>
    <active>true</active>
    <label>THIRD COUNTRY - CHARTER - MULTIMODAL</label>
</RecordType>