force-app/main/default/objects/AdvancedShipment__c/recordTypes/THIRDCOUNTRYCHARTERSEA.recordType-meta.xml
<RecordType>
    <fullName>THIRDCOUNTRYCHARTERSEA</fullName>
    <active>true</active>
    <label>THIRD COUNTRY - CHARTER - SEA</label>
</RecordType>