force-app/main/default/objects/AdvancedShipment__c/recordTypes/THIRDCOUNTRYCONSOLAIR.recordType-meta.xml
<RecordType>
    <fullName>THIRDCOUNTRYCONSOLAIR</fullName>
    <active>true</active>
    <label>THIRD COUNTRY - CONSOL - AIR</label>
</RecordType>