force-app/main/default/objects/AdvancedShipment__c/recordTypes/THIRDCOUNTRYCONSOLMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>THIRDCOUNTRYCONSOLMULTIMODAL</fullName>
    <active>true</active>
    <label>THIRD COUNTRY - CONSOL - MULTIMODAL</label>
</RecordType>