force-app/main/default/objects/AdvancedShipment__c/recordTypes/THIRDCOUNTRYCONSOLRAIL.recordType-meta.xml
<RecordType>
    <fullName>THIRDCOUNTRYCONSOLRAIL</fullName>
    <active>true</active>
    <label>THIRD COUNTRY - CONSOL - RAIL</label>
</RecordType>