force-app/main/default/objects/AdvancedShipment__c/recordTypes/THIRDCOUNTRYCONSOLSEA.recordType-meta.xml
<RecordType>
    <fullName>THIRDCOUNTRYCONSOLSEA</fullName>
    <active>true</active>
    <label>THIRD COUNTRY - CONSOL - SEA</label>
</RecordType>