force-app/main/default/objects/AdvancedShipment__c/recordTypes/THIRDCOUNTRYCONSOLTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>THIRDCOUNTRYCONSOLTRUCKING</fullName>
    <active>true</active>
    <label>THIRD COUNTRY - CONSOL - TRUCKING</label>
</RecordType>