force-app/main/default/objects/AdvancedShipment__c/recordTypes/THIRDCOUNTRYFCLAIR.recordType-meta.xml
<RecordType>
    <fullName>THIRDCOUNTRYFCLAIR</fullName>
    <active>true</active>
    <label>THIRD COUNTRY - FCL - AIR</label>
</RecordType>