force-app/main/default/objects/AdvancedShipment__c/recordTypes/THIRDCOUNTRYFCLMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>THIRDCOUNTRYFCLMULTIMODAL</fullName>
    <active>true</active>
    <label>THIRD COUNTRY - FCL - MULTIMODAL</label>
</RecordType>