force-app/main/default/objects/AdvancedShipment__c/recordTypes/THIRDCOUNTRYFCLRAIL.recordType-meta.xml
<RecordType>
    <fullName>THIRDCOUNTRYFCLRAIL</fullName>
    <active>true</active>
    <label>THIRD COUNTRY - FCL - RAIL</label>
</RecordType>