force-app/main/default/objects/AdvancedShipment__c/recordTypes/THIRDCOUNTRYFCLSEA.recordType-meta.xml
<RecordType>
    <fullName>THIRDCOUNTRYFCLSEA</fullName>
    <active>true</active>
    <label>THIRD COUNTRY - FCL - SEA</label>
</RecordType>