force-app/main/default/objects/AdvancedShipment__c/recordTypes/THIRDCOUNTRYFCLTRUCKING.recordType-meta.xml
<RecordType>
    <fullName>THIRDCOUNTRYFCLTRUCKING</fullName>
    <active>true</active>
    <label>THIRD COUNTRY - FCL - TRUCKING</label>
</RecordType>