force-app/main/default/objects/AdvancedShipment__c/recordTypes/THIRDCOUNTRYLCLAIR.recordType-meta.xml
<RecordType>
    <fullName>THIRDCOUNTRYLCLAIR</fullName>
    <active>true</active>
    <label>THIRD COUNTRY - LCL - AIR</label>
</RecordType>