force-app/main/default/objects/AdvancedShipment__c/recordTypes/THIRDCOUNTRYLCLMULTIMODAL.recordType-meta.xml
<RecordType>
    <fullName>THIRDCOUNTRYLCLMULTIMODAL</fullName>
    <active>true</active>
    <label>THIRD COUNTRY - LCL - MULTIMODAL</label>
</RecordType>